@@ -1,4 +1,6 @@
 0.13
+ - Add check for year in interval of 'dt_from' and 'dt_to' in
+   random_year().
  - Add Random::Day::InTheFuture object.
  - Add Random::Day::InThePast object.
  - Remove obsolete code from t/Random-Day/05-random.t .
